--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,11 @@ section {
   margin-bottom: 10px;
 }
 
+/* boton categorias */
+.categorias {
+  color: #ddd;
+}
+
 /* Estilo para los botones de categorías */
 .sidebar button {
   display: block;
@@ -150,10 +155,6 @@ section {
   width: 0;
   overflow: hidden;
   transition: width 0.3s ease-out;
-  -webkit-transition: width 0.3s ease-out;
-  -moz-transition: width 0.3s ease-out;
-  -ms-transition: width 0.3s ease-out;
-  -o-transition: width 0.3s ease-out;
 }
 
 /* Agrega este estilo para mostrar la barra lateral cuando tenga contenido */
@@ -194,8 +195,14 @@ header {
 }
 
 .categorias {
-  color: blue;
-  background-color: #333;
+  color: #ccc;
+  background-color: blue;
+  height: 20px;
+  width: 20%;
+}
+
+.nombre {
+  color: black;
 }
 
 /* Resto de tus estilos CSS... */
