--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,10 @@ header {
   width: 350px;
   /*Ajustaelvaloraquíparacambiarlaposiciónvertical*/
   left: 0;
+  -webkit-transition: width 0.2s ease;
+  -moz-transition: width 0.2s ease;
+  -ms-transition: width 0.2s ease;
+  -o-transition: width 0.2s ease;
 }
 
 /* Estilo para la lista de opciones */
@@ -125,6 +129,10 @@ header {
   width: 0;
   overflow: hidden;
   transition: width 0.3s ease-out;
+  -webkit-transition: width 0.3s ease-out;
+  -moz-transition: width 0.3s ease-out;
+  -ms-transition: width 0.3s ease-out;
+  -o-transition: width 0.3s ease-out;
 }
 
 /* Agrega este estilo para mostrar la barra lateral cuando tenga contenido */
@@ -180,4 +188,238 @@ header {
 /* Seccion de categorias con colores */
 .seccion {
   color: #ccc;
+}
+.contacto {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 1; /* Asegura que el botón esté por encima del contenido */
+  color: black;
+  background-color: blue;
+  height: 45px;
+  width: 150px; /* Ajusta el ancho del botón según tus necesidades */
+}
+
+#contactoVentaMenu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: #f0f0f0;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#contactoVentaMenu a {
+  display: block;
+  margin-bottom: 5px;
+  color: black;
+  text-decoration: none;
+}
+
+#contactoVentaMenu a:hover {
+  color: blue;
+}
+/* Ocultar el menú de contacto inicialmente */
+
+/* ESTILOS CONTACTO */
+/* Estilos para la sección de información */
+.info-section {
+  margin-top: 30px;
+  background-color: #000; /* Fondo negro */
+  color: black; /* Texto blanco */
+  padding: 20px; /* Añadir un espaciado interno para mejor legibilidad */
+}
+
+.info-section h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.info-section ul {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+.info-section li {
+  margin-bottom: 5px;
+}
+
+.info-section a {
+  text-decoration: none;
+  color: #0066cc; /* Cambia el color a tu preferencia */
+}
+
+.info-section a:hover {
+  text-decoration: underline;
+}
+
+.info-section p {
+  margin-bottom: 10px;
+}
+
+/* Estilos para la sección "Encuéntranos en" */
+.encuentranos {
+  font-weight: bold;
+}
+
+/* Estilos para el bloque de redes sociales */
+.social-block {
+  margin-top: 20px;
+}
+
+.social-block a {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+/* Estilos para el formulario de suscripción */
+.form-section {
+  margin-top: 30px;
+}
+
+.form-section h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.form-section input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.form-section input[type="submit"] {
+  background-color: #0066cc; /* Cambia el color a tu preferencia */
+  color: #000;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.form-section input[type="submit"]:hover {
+  background-color: #0052a3; /* Cambia el color a tu preferencia */
+}
+/* Estilos para la sección de información */
+.info-section {
+  margin-top: 30px;
+  background-color: #000; /* Fondo negro */
+  color: black; /* Texto blanco */
+  padding: 20px; /* Añadir un espaciado interno para mejor legibilidad */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.info-section h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.info-section ul {
+  list-style-type: none;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+.info-section li {
+  margin-bottom: 5px;
+}
+
+.info-section a {
+  text-decoration: none;
+  color: #0066cc; /* Cambia el color a tu preferencia */
+}
+
+.info-section a:hover {
+  text-decoration: underline;
+}
+
+.info-section p {
+  margin-bottom: 10px;
+}
+
+/* Estilos para la sección "Encuéntranos en" */
+.encuentranos {
+  font-weight: bold;
+}
+
+/* Estilos para el bloque de redes sociales */
+.social-block {
+  margin-top: 20px;
+}
+
+.social-block a {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+/* Estilos para el formulario de suscripción */
+.form-section {
+  margin-top: 30px;
+}
+
+.form-section h2 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.form-section input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.form-section input[type="submit"] {
+  background-color: #0066cc; /* Cambia el color a tu preferencia */
+  color: black;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.form-section input[type="submit"]:hover {
+  background-color: #0052a3; /* Cambia el color a tu preferencia */
+}
+
+/* Icono whaapp */
+/* Estilos para el icono de WhatsApp */
+.whatsapp-icon {
+  font-size: 24px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25d366; /* Cambia el color a tu preferencia */
+  color: black;
+  padding: 10px;
+  border-radius: 50%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilos para la sección de información */
+.moving-info {
+  background-color: #f0f0f0;
+  padding: 10px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+  animation: moveText 10s infinite alternate;
+}
+
+/* Animación para mover el texto */
+@keyframes moveText {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(10px);
+  }
+}
+
+#info-message {
+  color: black; /* Color de letra negro */
 }
