--- a/styles.css
+++ b/styles.css
@@ -200,27 +200,6 @@ header {
   width: 150px; /* Ajusta el ancho del botón según tus necesidades */
 }
 
-#contactoVentaMenu {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: #f0f0f0;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-#contactoVentaMenu a {
-  display: block;
-  margin-bottom: 5px;
-  color: black;
-  text-decoration: none;
-}
-
-#contactoVentaMenu a:hover {
-  color: blue;
-}
 /* Ocultar el menú de contacto inicialmente */
 
 /* ESTILOS CONTACTO */
@@ -414,9 +393,17 @@ header {
 @keyframes moveText {
   0% {
     transform: translateY(0);
+    -webkit-transform: translateY(0);
+    -moz-transform: translateY(0);
+    -ms-transform: translateY(0);
+    -o-transform: translateY(0);
   }
   100% {
     transform: translateY(10px);
+    -webkit-transform: translateY(10px);
+    -moz-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    -o-transform: translateY(10px);
   }
 }
 
