--- a/styles.css
+++ b/styles.css
@@ -62,7 +62,7 @@ header {
 .indumentaria,
 .chaleco {
   text-align: center;
-  color: black;
+  color: #ffe400;
   background-color: blue; /* Cambia el color aquí al que desees */
   padding: 10px; /* Agrega un espacio interno para que se vea mejor */
   /* Puedes agregar otros estilos según tus necesidades */
