--- a/styles.css
+++ b/styles.css
@@ -84,20 +84,16 @@ header {
 
 /* Estilo para la barra lateral (sidebar) */
 .sidebar {
-  width: 300%;
+  width: 8000%;
+  height: auto;
   padding: 0px;
   background-color: black;
   overflow: hidden;
-  transition: width 0.2s ease;
+  transition: width 0.3s ease;
   position: fixed;
   top: 50px;
-  width: 350px;
+  width: 600%;
   /*Ajustaelvaloraquíparacambiarlaposiciónvertical*/
-  left: 0;
-  -webkit-transition: width 0.2s ease;
-  -moz-transition: width 0.2s ease;
-  -ms-transition: width 0.2s ease;
-  -o-transition: width 0.2s ease;
 }
 
 /* Estilo para la lista de opciones */
@@ -172,19 +168,21 @@ header {
 .categorias {
   margin: 0;
   padding: 0;
-  color: beige;
-  background-color: green;
+  color: white;
+  background-color: #bb1111;
   height: 40px;
   width: 100%;
   display: flex;
   align-items: center;
+  cursor: pointer;
   justify-content: center;
-  border: 1px solid #000; /* Puedes quitar el borde si no lo deseas */
+  border: 1px solid #0066cc; /* Puedes quitar el borde si no lo deseas */
 }
 
 .categorias h2 {
   font-size: 20px;
   margin: 0;
+  cursor: pointer;
 }
 
 .nombre {
@@ -195,7 +193,7 @@ header {
 
 /* Seccion de categorias con colores */
 .seccion {
-  color: #ccc;
+  color: red;
 }
 .contacto {
   position: fixed;
@@ -203,7 +201,7 @@ header {
   left: 20px;
   z-index: 1; /* Asegura que el botón esté por encima del contenido */
   color: black;
-  background-color: blue;
+  background-color: #0066cc;
   height: 45px;
   width: 150px; /* Ajusta el ancho del botón según tus necesidades */
 }
@@ -236,7 +234,7 @@ header {
 
 .info-section a {
   text-decoration: none;
-  color: #0066cc; /* Cambia el color a tu preferencia */
+  color: #ccc; /* Cambia el color a tu preferencia */
 }
 
 .info-section a:hover {
@@ -279,7 +277,7 @@ header {
 }
 
 .form-section input[type="submit"] {
-  background-color: #0066cc; /* Cambia el color a tu preferencia */
+  background-color: #ccc; /* Cambia el color a tu preferencia */
   color: #000;
   border: none;
   padding: 10px 20px;
@@ -315,11 +313,6 @@ header {
 
 .info-section li {
   margin-bottom: 5px;
-}
-
-.info-section a {
-  text-decoration: none;
-  color: #0066cc; /* Cambia el color a tu preferencia */
 }
 
 .info-section a:hover {
@@ -395,6 +388,7 @@ header {
   font-size: 20px;
   font-weight: bold;
   animation: moveText 10s infinite alternate;
+  -webkit-animation: moveText 10s infinite alternate;
 }
 
 /* Animación para mover el texto */
